--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,4 +1,4 @@
 PORT=8080
-CLIENT_URL=
-MONGO_DB_URL=
+CLIENT_URL=http://localhost:3000
+MONGO_DB_URL=mongodb://localhost:27017/schoolapp
 NODE_ENV=development
