--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node -r esm server.js",
         "dev": "nodemon -r esm server.js",
-        "test": "npm test"
+        "test": "jest --watch"
     },
     "repository": {
         "type": "git",
@@ -21,6 +21,8 @@
     "author": "sakib hasan",
     "license": "ISC",
     "dependencies": {
+        "@babel/core": "^7.13.10",
+        "@babel/preset-env": "^7.13.12",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
@@ -31,7 +33,9 @@
         "mongoose": "^5.12.2"
     },
     "devDependencies": {
+        "jest": "^26.6.3",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "supertest": "^6.1.3"
     }
 }
